@@ -1,0 +1,20 @@
+# file GENERATED by distutils, do NOT edit
+CHANGELOG
+LICENSE
+README.rst
+pyp2rpm
+setup.py
+pyp2rpmlib/__init__.py
+pyp2rpmlib/archive.py
+pyp2rpmlib/convertor.py
+pyp2rpmlib/dependency_parser.py
+pyp2rpmlib/exceptions.py
+pyp2rpmlib/filters.py
+pyp2rpmlib/metadata_extractors.py
+pyp2rpmlib/package_data.py
+pyp2rpmlib/package_getters.py
+pyp2rpmlib/settings.py
+pyp2rpmlib/utils.py
+pyp2rpmlib/version.py
+pyp2rpmlib/templates/fedora.spec
+pyp2rpmlib/templates/macros.spec
