@@ -1,3 +1,6 @@
+* Moved monkey patching of ZipFile to not interfere with setup.py install (thanks to
+  Konstantin Zemlyak).
+
 - 0.4.1
 * Some minor fixes.
 * Temporary use distutils in setup.py to overcome issues with installation.
